--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vercel": "^43.2.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
