--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,1 @@
-{
-	"version": 2,
-	"builds": [
-		{ "src": "dist/index.js", "use": "@vercel/node" },
-		{ "src": "public/**", "use": "@vercel/static" }
-	],
-	"routes": [
-		{ "src": "/api/(.*)", "dest": "dist/index.js" },
-		{ "src": "/(.*)", "dest": "dist/index.js" }
-	]
-}
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
