--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0",
-    "typescript": "^5.8.3",
-    "vercel": "^43.2.0"
+    "serverless-http": "^3.1.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "@types/node": "^20.4.2",
+    "typescript": "^5.8.3"
   }
 }
