--- a/package.json
+++ b/package.json
@@ -7,18 +7,21 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "start": "node api/index.ts",
-    "dev": "ts-node api/index.ts"
+    "dev": "ts-node api/index.ts --watch"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.0.0",
     "express": "^5.1.0",
     "serverless-http": "^3.1.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "ts-node": "^10.9.2",
     "@types/node": "^20.4.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
 }
